<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">大明白</string>
    <string name="str_ok">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_enter">进入大明白</string>
    <string name="str_exit">再按一次退出大明白</string>
    <string name="str_init_org_structure_tip">正在初始化组织关系，请稍等</string>
    <string name="str_tab_msg">消息</string>
    <string name="str_tab_work">工作</string>
    <string name="str_tab_contact">联系人</string>
    <string name="str_tab_me">我的</string>
    <string name="str_tab_scm">供应链</string>
    <string name="str_tab_boss_ass">老板助手</string>
    <string name="str_login">登录</string>
    <string name="str_tip">提示</string>
    <string name="str_heading_login">登录</string>
    <string name="str_heading_find_pwd">找回密码</string>
    <string name="str_heading_reset_pwd">重置密码</string>
    <string name="str_init_pwd">设置密码</string>
    <string name="str_heading_register">注册账号</string>
    <string name="str_heading_input">填写信息</string>
    <string name="str_label_name">姓名</string>
    <string name="str_label_phone">账号</string>
    <string name="str_label_phone_china">+86</string>
    <string name="str_label_pwd">密码</string>
    <string name="str_label_valid_code">获取验证码</string>
    <string name="str_label_new_pwd">新密码</string>
    <string name="str_label_old_pwd">原密码</string>
    <string name="str_label_code">验证码</string>
    <string name="str_label_auth_code_send_fail">获取验证码失败</string>
    <string name="str_label_confirm_pwd">确认密码</string>
    <string name="str_label_forgot_pwd">忘记密码?</string>
    <string name="str_label_init_pwd">设置密码</string>
    <string name="str_label_register_account">注册新账号</string>
    <string name="str_label_copyright_line1">"点击注册按钮"</string>
    <string name="str_label_copyright_line2">"则表示你已同意大明白《服务协议》和《隐私协议》"</string>
    <string name="str_label_service_tel">热线</string>
    <string name="str_btn_text_next">下一步</string>
    <string name="str_btn_text_login">登录</string>
    <string name="str_btn_text_confirm">确认</string>
    <string name="str_btn_text_register">注册</string>
    <string name="str_tip_valid_code">请输入验证码</string>
    <string name="str_tip_text_phone">请输入手机号码</string>
    <string name="str_tip_text_origin_pwd">请输入原密码</string>
    <string name="str_tip_input_name">请输入您的姓名，以便于别人更容易找到你</string>
    <string name="str_tip_rule_pwd">请输入6-12位数字和字母组合</string>
    <string name="str_tip_confirm_pwd">请再次输入新密码</string>
    <string name="str_login_please_wait">登录中，请耐心等待</string>
    <string name="str_login_fail">登录失败</string>
    <string name="str_login_fail_server">服务器端异常</string>
    <string name="str_please_wait">正在请求数据，请稍等</string>
    <string name="str_input_phone_tip">请输入你的手机号码</string>
    <string name="str_input_pwd_tip">请输入密码</string>
    <string name="str_input_confirm_pwd_tip">请输入确认密码</string>
    <string name="str_pwd_not_match_tip">您两次输入的密码不一致</string>
    <string name="str_pwd_format_error">密码不符合规则，请输入6到12位数字与字母的组合</string>
    <string name="str_error_tip_input_origin_pwd_empty">请输入原密码</string>
    <string name="str_error_tip_input_new_pwd_empty">请输入新密码</string>
    <string name="str_error_tip_input_confirm_pwd_empty">确认密码不能为空</string>
    <string name="str_input_auth_code_tip">请输入你收到的验证码</string>
    <string name="str_input_phone_error">您输入的手机号码有误！</string>
    <string name="str_bind_phone_tip">请联系管理员绑定您的手机号</string>
    <string name="str_input_auth_code_error">您输入的验证码有误！</string>
    <string name="str_auth_code">%d秒</string>
    <string name="str_auth_code_send_tip">发送验证码</string>
    <string name="str_input_confirm_pwd_error">两次输入的密码不一样，请重新设置</string>
    <string name="str_input_name_tip">请输入你的姓名</string>
    <string name="str_input_name_error">你输入的姓名有误</string>
    <string name="str_setting_name">设置</string>
    <string name="str_my_account_name">我的账户</string>
    <string name="str_feedback_name">反馈</string>
    <string name="str_back">返回</string>
    <string name="str_feedback_mail">联系邮箱</string>
    <string name="str_feedback_content">反馈内容</string>
    <string name="str_avatar_text">头像</string>
    <string name="str_gender_text">性别</string>
    <string name="str_birthday_text">生日</string>
    <string name="str_area_text">地区</string>
    <string name="str_name_text">姓名</string>
    <string name="str_mobile_number">手机号</string>
    <string name="str_phone_text">电话</string>
    <string name="str_dept_text">部门</string>
    <string name="str_company_text">企业</string>
    <string name="str_company_info_text">企业信息</string>
    <string name="str_person_info_text">个人信息</string>
    <string name="str_label_search_layout">搜索名字 手机号</string>
    <string name="str_label_search_history">搜索历史</string>
    <string name="str_label_my_friend">我的好友</string>
    <string name="str_label_my_group">我的群组</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="str_work_item_monitor">运营督导</string>
    <string name="str_work_item_command">指令下达</string>
    <string name="str_work_item_note">公告</string>
    <string name="str_work_item_approve">审批</string>
    <string name="str_work_enterprise_name_default">知行易信息科技有限公司</string>
    <string name="str_chat_setting_item_member">成员</string>
    <string name="str_chat_setting_item_add_member">添加新成员</string>
    <string name="str_chat_setting_item_group_name">群名称</string>
    <string name="str_chat_setting_item_clear_history">清空聊天记录</string>
    <string name="str_chat_setting_item_pup_up">置顶聊天</string>
    <string name="str_chat_setting_item_silence">消息免打扰</string>
    <string name="str_btn_clear_exit">删除并退出</string>
    <string name="str_chat_setting_title">聊天设置</string>
    <string name="str_group_chat_setting_title">群设置</string>
    <string name="str_create_chat_group_fail">网络异常，创建群聊失败</string>
    <string name="str_exit_group_tip">你确定要退出该群组?</string>
    <string name="str_dissolve_group_tip">你确定要解散本群组?</string>
    <string name="str_exit_group_fail">退出群组失败，请稍后再进行尝试</string>
    <string name="str_dissolve_group_fail">解散群组失败，请稍后再进行尝试</string>
    <string name="str_new_friend_apply_title">新的好友</string>
    <string name="str_new_friend_apply_content">%s请求添加好友</string>
    <string name="str_new_friend_apply_refuse_content">你已拒绝%s的好友申请</string>
    <string name="str_new_friend_apply_agree_content">你已同意%s的好友申请</string>
    <string name="str_new_friend_apply_other_agree_content">%s已同意了你的好友申请</string>
    <string name="str_you_launch_one_group_chat">"你发起了一个群聊"</string>
    <string name="str_no_chat_history">暂无聊天记录</string>
    <string name="str_new_enterprise_apply_title">企业申请</string>
    <string name="str_new_enterprise_apply_content">您有新的团队申请</string>
    <string name="str_new_enterprise_response_title">企业回复</string>
    <string name="str_new_enterprise_response_content">您有新的团队回复</string>
    <string name="str_enterprise_info_title">企业信息</string>
    <string name="str_enterprise_action_command_tip">你收到一条[指令]</string>
    <string name="str_enterprise_action_approve_tip">你收到一条[审批]</string>
    <string name="str_enterprise_action_note_tip">你收到一条[公告]</string>
    <string name="str_enterprise_action_data_funnel_tip">你收到一条[营业数据]</string>
    <string name="str_agree">同意</string>
    <string name="str_refuse">拒绝</string>
    <string name="str_already_agree">已同意</string>
    <string name="str_already_refuse">已拒绝</string>
    <string name="str_enterprise_summary">企业简介</string>
    <string name="str_contact_number">联系电话</string>
    <string name="str_enterprise_address">企业地址</string>
    <string name="str_add_employee_title">添加员工</string>
    <string name="str_complete">完成</string>
    <string name="str_post">岗位</string>
    <string name="str_department">部门</string>
    <string name="str_edit_fail">网络异常，更改失败</string>
    <string name="str_request_fail">请求出错，请稍后再试</string>
    <string name="str_doing_tip">正在处理，请耐心等待</string>
    <string name="str_has_agree">已同意</string>
    <string name="str_has_refuse">已拒绝</string>
    <string name="str_friend_request_agree_process">正在同意好友请求...</string>
    <string name="str_friend_request_refuse_process">正在拒绝好友请求...</string>
    <string name="str_enterprise_request_agree_process">正在同意企业申请...</string>
    <string name="str_reply_with_failure">操作失败</string>
    <string name="accept_join_group">accept join group:</string>
    <string name="refuse_join_group">refuse join group:</string>
    <string name="invite_join_group">Invite to join the group</string>
    <string name="Are_refuse_with">Refusing</string>
    <string name="Refuse_with_failure">拒绝失败:</string>
    <string name="str_all_msg">全部消息</string>
    <string name="str_filter_msg">筛选</string>
    <string name="str_update_group_name">修改群组名称</string>
    <string name="str_hint_update_name">请输入群组名称</string>
    <string name="str_no_rights_update_name">您没有权限更改群名字</string>
    <string name="str_send_msg">发送消息</string>
    <string name="str_add_friend">添加好友</string>
    <string name="str_clear_history">清空了历史消息</string>
    <string name="str_exit_group">你确认退出该群组吗？</string>
    <string name="str_clear_chat_history_success">聊天记录已经清空</string>
    <string name="str_cancel_select_contact">确定退出选择联系人吗?</string>
    <string name="str_feedback_email_tip">请输入你的邮箱，方便我们与你联系</string>
    <string name="str_feedback_email_error_tip">你输入的邮箱有误，请确认。</string>
    <string name="str_feedback_content_tip">请输入你的反馈内容</string>
    <string name="str_feedback_send_tip">正在发送你的反馈信息</string>
    <string name="str_feedback_send_success">发送成功，感谢你提供的反馈意见。</string>
    <string name="str_feedback_send_fail">发送失败，请稍后再试。</string>
    <string name="str_feedback_send_fail2">发送失败，请稍后再试。</string>
    <string name="str_send_location_title">位置信息</string>
    <string name="str_send_location_send">发送</string>
    <string name="str_clear_cache">确定清除缓存吗？</string>
    <string name="str_logout_confirm_header">退出当前账号</string>
    <string name="str_logout_confirm_content">退出大明白会将一些本地缓存的数据清空，确定退出?</string>
    <string name="str_logout_ok">确认退出</string>
    <string name="str_no_select_contacts">没有选择任何联系人</string>
    <string name="str_no_employees_info">没有找到该员工信息</string>
    <string name="str_logout_fail">登出失败，请稍后再试。</string>
    <string name="str_order">指令</string>
    <string name="str_approve">审批</string>
    <string name="str_announce">公告</string>
    <string name="str_data_funnel">营业数据</string>
    <string name="str_no_class_found">没有找到要跳转的界面</string>
    <string name="str_download_ovopark_app_prompt">请通过浏览器先下载并安装"智能门店"APP.</string>
    <string name="str_register_ovopark_server_fail">注册"智能门店"未成功</string>
    <string name="str_work_item_in_dev">此功能正在开发中,敬请期待...</string>
    <string name="str_relieve_friend">解除好友关系</string>
    <string name="str_relieve_friend_dialog_confirm">确定要解除好友关系？解除后会删除与对方的会话记录。</string>
    <string name="str_no_content_tip">空空如也 暂无消息</string>
    <string name="str_avatar_upload">正在上传...</string>
    <string name="str_removing">正在移除...</string>
    <string name="str_remove_group_member_fail">移除群成员失败:</string>
    <string name="str_remove_group_member_confirm">你确定要移除此成员吗？</string>
    <string name="str_add_group_member_already_exists">用户 %s 已在该群组中</string>
    <string name="str_add_group_member_with_me">不能跟自己发起群聊</string>
    <string name="str_group_name_not_empty">群名称不能为空</string>
    <string name="str_delete_conversation_fail">删除会话失败</string>
    <string name="str_corrupted_image_tip">图片解析失败，请检查该图片是否正常</string>
    <string name="str_fail_grant_recode_permission">未获得录音授权，请检查权限设置</string>
    <string name="str_fail_grant_camera_permission">未获得相机授权，请检查权限设置</string>
    <string name="str_fail_grant_location_permission">未获得定位授权，请检查权限设置</string>
    <string name="str_select_pic_header">选择图片来源</string>
    <string name="str_feedback_content_max_length">最多可输入500个字符!</string>
    <string name="str_label_current_select_member">当前已选中</string>
    <string name="str_label_current_selected">已选择%1$d人，其中有%2$d个部门</string>
    <string name="str_notice_account">请输入你的账号</string>
    <string name="str_notice_password">请输入你的密码</string>
</resources>