<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_space_15"
            android:text="@string/str_label_phone"
            android:textColor="@color/color_label_black_grey"
            android:textSize="@dimen/dimen_phone_text" />
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_label_phone_china"
            android:textSize="@dimen/dimen_label_text"
            android:textColor="@color/color_label_black"
            android:layout_marginLeft="@dimen/margin_space_5"
            android:layout_marginTop="@dimen/margin_space_15"
            android:layout_marginBottom="@dimen/margin_space_15"
            android:layout_gravity="center_vertical"
            />-->

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_space_5"
            android:background="@null"
            android:hint="@string/str_notice_account"
            android:textColorHint="@color/color_input_tip_grey"
            android:textSize="@dimen/dimen_label_text" />
    </LinearLayout>

    <include layout="@layout/divide_line"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_space_15"
                android:text="@string/str_label_code"
                android:textColor="@color/color_label_black_grey"
                android:textSize="@dimen/dimen_valid_code_text" />

            <EditText
                android:id="@+id/edit_auth_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_space_5"
                android:layout_marginTop="@dimen/margin_space_5"
                android:background="@null"
                android:hint="@string/str_tip_valid_code"
                android:inputType="number"
                android:textColorHint="@color/color_input_tip_grey"
                android:textSize="@dimen/dimen_label_text" />
        </LinearLayout>

        <com.fine.fineapp.ui.view.AuthCodeView
            android:id="@+id/btn_auth_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_space_15"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_label_valid_code"
            android:textColor="@color/color_action_blue"
            android:textSize="@dimen/dimen_valid_code_text" />
    </LinearLayout>

    <include layout="@layout/divide_line"></include>
</merge>
